Изменен цвет фона, сделаны правильные размеры хедера, изменен цвет текста

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </svg>
     </div>
 </header>
-<div class="body_title-container">
+<div class="container body_title-container">
     <h1 class="body_title">
         <spam>Paimon</spam>
     </h1>
