Работа со шрифтами и их адаптивами для разных разрешений экрана

--- a/index.html
+++ b/index.html
@@ -27,13 +27,32 @@
             <use href="img/sprite.svg#paimon" />
         </svg>
     </div>
+    <nav class="navigation">
+       <div class="container navigation_container">
+        <ul class="navigation_list">
+            <li class="navigation_item"><button class="navigation_button">О нас</button></li>
+            <li class="navigation_item"><button class="navigation_button">Материалы</button></li>
+            <li class="navigation_item"><button class="navigation_button">Процесс</button></li>
+            <li class="navigation_item"><button class="navigation_button">Проекты</button></li>
+            <li class="navigation_item"><button class="navigation_button">Отзывы</button></li>
+            <li class="navigation_item navigation_button_request"><button class="navigation_button">Оставить заявку</button></li>
+        </ul>
+       </div>     
+    </nav>
 </header>
-<div class="container body_title-container">
-    <h1 class="body_title">
-        <spam>Paimon</spam>
-    </h1>
-    <p class="appeal">Производство неповторимой мебели на заказ по вашим самым захватывающим идеям</p>
-</div>
+<main>
+    <div class="container">
+        <h1>
+            <spam>Paimon</spam>
+        </h1>
+        <p class="medium">Производство неповторимой мебели на заказ по вашим самым захватывающим идеям</p>
+        <p class="large">Производство неповторимой мебели на заказ по вашим самым захватывающим идеям</p>
+    </div>
+
+
+      
+</main>
+
 
 </body>
 </html> 
